added garbage collection implementations as option for CLI app